src/objects/ErrorLog_CF__c.object
<CustomObject>
    <description>Object to store error logs captured on Apex Code.</description>
    <fields>
        <fullName>AdditionalSerializedObject_CF__c</fullName>
        <description>Additional serialized object that the developer can indicate, for further analysis.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional serialized object that the developer can indicate, for further analysis.</inlineHelpText>
        <label>Additional Serialized Object</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClassName_CF__c</fullName>
        <description>Class which threw the exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Class which threw the exception.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId_CF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_CF__c</fullName>
        <description>Error message.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Error message.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MethodName_CF__c</fullName>
        <description>Method which threw the exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Method which threw the exception.</inlineHelpText>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerializedClass_CF__c</fullName>
        <description>Serialized Class which caused the exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Serialized Class which caused the exception.</inlineHelpText>
        <label>Serialized Class</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace_CF__c</fullName>
        <description>Stack Trace of the Exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stack Trace of the Exception.</inlineHelpText>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>